changed top styling on .nav-bar to resolve spacing issue on mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ footer .heading-sub-four {
 
 .nav-bar {
   position: absolute;
-  top: 50%;
+  top: 52%;
   width: 100%;
   margin-top: 1em;
 }
