--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -25,7 +25,7 @@
 
 .nav-bar {
   position: absolute;
-  top: 50%;
+  top: 52%;
   width: 100%;
   margin-top: 1em;
 }
